position and reative

--- a/sridar.html
+++ b/sridar.html
@@ -4,12 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.tailwindcss.com"></script>
     <title>Document</title>
 </head>
 <body>
     <section>
-        <div class="" style="backz">
-
+        <div class=" min-h-[750px] pt-10" style="background-image: url('https://images.pexels.com/photos/302769/pexels-photo-302769.jpeg?cs=srgb&dl=pexels-pixabay-302769.jpg&fm=jpg');">
+           <div class="container m-auto">
+               <div class="bg-white border-8 border-red-800 w-1/4 p-10 h-60 relative"> 
+               <div class="bg-white  w-[400px] p-10 h-60 absolute top-8 left-10" style="background-image: url('https://cdn.pixabay.com/photo/2018/07/14/15/27/cafe-3537801__340.jpg');">  
+                <div class="py-8 px-2 md:text-left text-center ">
+                  </div>
+            </div>
+           </div >
+           
+           </div>
         </div>
     </section>
 </body>
